Bug 85179 - FILEOPEN: RTF - Image border not preserved
Summary: FILEOPEN: RTF - Image border not preserved
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0 target:4.3.4
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-10-18 18:24 UTC by Luke
Modified: 2015-12-17 12:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample RTF illustrating this issue (469.03 KB, application/rtf)
2014-10-18 18:24 UTC, Luke
Details
correct look of the sample file in LibO 3.3.3 (19.82 KB, image/png)
2014-10-18 20:02 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-10-18 18:24:59 UTC
Created attachment 108032 [details]
Sample RTF illustrating this issue

Steps to Reproduce:
1. Insert an image into a Word doc
2. Add a border
3. Save as RTF
4. Open in Writer

Confirmed on:
Version: 4.4.0.0.alpha0+
TinderBox: Win-x86@42, Branch:master, Time: 2014-10-16_01:04:13
AND
Version: 4.2.6.3

AOO 4.2 correctly imports this file with the proper border.
Comment 1 Cor Nouws 2014-10-18 19:36:58 UTC
In 3.3.3.1 it was OK
In 3.4.0.1 there is only a border on the left side
In 3.6 no yellow border
Comment 2 tommy27 2014-10-18 20:02:31 UTC
Created attachment 108040 [details]
correct look of the sample file in LibO 3.3.3

same results as Cor. adding a screenshot as well.
Comment 3 Miklos Vajna 2014-10-23 17:08:28 UTC
The problem is that we first create a shape (which has the proper border) and later we decide if it gets converted to a Writer picture or not. E.g. for rotated shapes, there is no such conversion. When there *is* such a conversion, we fail to copy the line properties as border properties over to the Writer picture.
Comment 5 Miklos Vajna 2014-10-25 08:43:02 UTC
libreoffice-4-3 review: https://gerrit.libreoffice.org/12092
Comment 7 Robinson Tryon (qubit) 2015-12-17 12:53:37 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Remove redundant rtf_filter.
[NinjaEdit]