fdo#85179 RTF filter: import image border

Also adjust CppunitTest_sw_htmlexport that implicitly tested that there
is no color around the image.

(cherry picked from commit 01a32b7d074511bed24044dc94e1159aea62722b)

Conflicts:
	writerfilter/source/dmapper/GraphicImport.cxx

Change-Id: I8e14dfa7e7be80c4f8c492999071decae6a492e8
Reviewed-on: https://gerrit.libreoffice.org/12092
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>